objects/ASI_CRM_PreContractEval__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Area__c</fullName>
        <formula>ASI_CRM_CN_Outlet__r.ASI_CRM_CN_CCity__r.ASI_CRM_CN_Area__r.Name</formula>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_Incentive_Total__c</fullName>
        <label>Bottle Incentive Total</label>
        <summarizedField>ASI_CRM_Pre_Contract_Sub_Brand__c.ASI_CRM_Temp_Total_Amount__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Pre_Contract_Sub_Brand__c.ASI_CRM_Pre_Contract_Eval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Budget_Version__c</fullName>
        <label>Budget Version</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Division__c</fullName>
        <formula>ASI_CRM_CN_Outlet__r.ASI_CRM_CN_CCity__r.ASI_CRM_CN_Area__r.ASI_CRM_Division__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Fixed_Expense_Aligned__c</fullName>
        <label>Fixed Expense Aligned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Fixed_Expense_Rate_Aligned__c</fullName>
        <label>Fixed Expense Rate Aligned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Fixed_Expense_Rate__c</fullName>
        <formula>ASI_CRM_Fixed_Expense__c / ASI_CRM_Contract_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fixed Expense %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Investment_CR12_Aligned__c</fullName>
        <label>Investment CR12 Aligned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Contract_EstFExpense__c</fullName>
        <label>Last Contract Est Fixed Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Contract_EstVExpense__c</fullName>
        <label>Last Contract Est Variable Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Contract_Est_Expense__c</fullName>
        <label>Last Contract Est Trade Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Contract_Fixed_Expense__c</fullName>
        <formula>ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_Contract_Est_Fixed_Cost_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Contract Fixed Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Contract_Investment_CR12__c</fullName>
        <label>Last Contract Investment CR12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Contract_ROI__c</fullName>
        <label>Last Contract ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Contract_TotalAPGS__c</fullName>
        <label>Last Contract % of Total A&amp;P/GS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Contract_Trade_Expense__c</fullName>
        <description>Does not include BRSF Variable Line item expenses</description>
        <formula>ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_Contract_Est_Fixed_Cost_Total__c +  ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_Contract_Est_Var_Cost_Total__c + (ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_BRSF_Contract_Total__c * ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_No_of_Months__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Contract Trade Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Contract_Variable_Exp__c</fullName>
        <formula>ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_Contract_Est_Var_Cost_Total__c + (ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_BRSF_Contract_Total__c * ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_No_of_Months__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Contract Variable Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Contract_Volume_Total__c</fullName>
        <label>Last Contract Volume Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Pre-Contract Evaluation</relationshipLabel>
        <relationshipName>Pre_Contract_Evaluation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Fixed_Exp_Rate__c</fullName>
        <formula>ASI_CRM_CN_Last_Contract_Fixed_Expense__c /  ASI_CRM_CN_Last_Contract_Trade_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Contract Fixed Expense %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_PO_End_Date__c</fullName>
        <formula>ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_PO_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last PO End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_PO_Start_Date__c</fullName>
        <formula>ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_PO_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last PO Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Po_Period_Months__c</fullName>
        <formula>ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_No_of_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Po Period (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_V0_Contract_FixExp_Rate__c</fullName>
        <formula>ASI_CRM_CN_Last_V0_Contract_FixedExpense__c / ASI_CRM_CN_Last_V0_Contract_TradeExpense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last V0 Contract Fixed Expense %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_V0_Contract_FixedExpense__c</fullName>
        <formula>if(ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_V0_0_PO_version__c != null, ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_V0_0_PO_version__r.ASI_CRM_CN_Contract_Est_Fixed_Cost_Total__c, ASI_CRM_CN_Last_Contract_Fixed_Expense__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last V0 Contract Fixed Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_V0_Contract_InvestCR12__c</fullName>
        <label>Last V0 Contract Investment CR12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_V0_Contract_Pro_FormaROI__c</fullName>
        <label>Last V0 Contract Pro-Forma ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_V0_Contract_ROI__c</fullName>
        <label>Last V0 Contract ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_V0_Contract_Total_APGS__c</fullName>
        <label>Last V0 Contract % of Total A&amp;P/GS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_V0_Contract_TradeExpense__c</fullName>
        <formula>if(ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_V0_0_PO_version__c != null, ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_V0_0_PO_version__r.ASI_CRM_CN_Contract_Est_Fixed_Cost_Total__c + ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_V0_0_PO_version__r.ASI_CRM_CN_Contract_Est_Var_Cost_Total__c + (ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_V0_0_PO_version__r.ASI_CRM_CN_BRSF_Contract_Total__c * ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_V0_0_PO_version__r.ASI_CRM_CN_No_of_Months__c), ASI_CRM_CN_Last_Contract_Trade_Expense__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last V0 Contract Trade Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_V0_Contract_VarExpense__c</fullName>
        <formula>if(ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_V0_0_PO_version__c != null, ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_V0_0_PO_version__r.ASI_CRM_CN_Contract_Est_Var_Cost_Total__c + (ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_V0_0_PO_version__r.ASI_CRM_CN_BRSF_Contract_Total__c * ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_V0_0_PO_version__r.ASI_CRM_CN_No_of_Months__c), ASI_CRM_CN_Last_Contract_Variable_Exp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last V0 Contract Variable Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_V0_Contract_Volume_Total__c</fullName>
        <label>Last V0 Contract Volume Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Monthly_Volume__c</fullName>
        <label>Monthly Volume</label>
        <summarizedField>ASI_CRM_Pre_Contract_Sub_Brand__c.ASI_CRM_Estimated_Btl_Month__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Pre_Contract_Sub_Brand__c.ASI_CRM_Pre_Contract_Eval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Outlet_Chi_Name__c</fullName>
        <formula>ASI_CRM_CN_Outlet__r.ASI_CRM_CN_Chi_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Chi Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Pre-Contract Evaluation</relationshipLabel>
        <relationshipName>Pre_Contract_Evaluation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_ROI_Aligned__c</fullName>
        <label>ROI Aligned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_ROI__c</fullName>
        <label>ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sales_Rep__c</fullName>
        <formula>ASI_CRM_CN_Outlet__r.ASI_CRM_CN_Sales_Rep__r.FirstName + &apos; &apos; + ASI_CRM_CN_Outlet__r.ASI_CRM_CN_Sales_Rep__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sub_Channel_Chi_Name__c</fullName>
        <formula>ASI_CRM_CN_Outlet__r.ASI_CRM_CN_Sub_Channel__r.ASI_CRM_CN_Sub_Channel_Chi_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Channel Chi Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_APGS_Aligned__c</fullName>
        <label>% of Total A&amp;P/GS Aligned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_APGS__c</fullName>
        <label>% of Total A&amp;P/GS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_Volume_9L__c</fullName>
        <formula>ASI_CRM_Monthly_Contract_Total_Vol_9LC__c * ASI_CRM_No_of_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Volume (9L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Trade_Expense_Aligned__c</fullName>
        <label>Trade Expense Aligned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_VS_Fixed_Exp_Rate__c</fullName>
        <formula>( ASI_CRM_CN_Fixed_Expense_Rate__c -  ASI_CRM_CN_Last_Fixed_Exp_Rate__c )/ ASI_CRM_CN_Last_Fixed_Exp_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VS Fixed Expense %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_VS_Fixed_Expense__c</fullName>
        <formula>( ASI_CRM_Fixed_Expense__c -  ASI_CRM_CN_Last_Contract_EstFExpense__c )/ ASI_CRM_CN_Last_Contract_EstFExpense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VS Fixed Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_VS_Investment_CR12__c</fullName>
        <formula>( ASI_CRM_Investment_per_Equiv_Chivas_12Y__c - ASI_CRM_CN_Last_Contract_Investment_CR12__c)/ASI_CRM_CN_Last_Contract_Investment_CR12__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VS Investment CR12 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_VS_ROI__c</fullName>
        <formula>( ASI_CRM_CN_ROI__c - ASI_CRM_CN_Last_Contract_ROI__c )/ASI_CRM_CN_Last_Contract_ROI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VS ROI %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_VS_Total_APGS__c</fullName>
        <formula>(ASI_CRM_CN_Total_APGS__c - ASI_CRM_CN_Last_Contract_TotalAPGS__c ) / ASI_CRM_CN_Last_Contract_TotalAPGS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VS % of Total A&amp;P/GS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_VS_Trade_Expense__c</fullName>
        <formula>(ASI_CRM_Contract_Total__c  -  ASI_CRM_CN_Last_Contract_Est_Expense__c )/ASI_CRM_CN_Last_Contract_Est_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VS Trade Expense %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_VS_Variable_Expense__c</fullName>
        <formula>(  ASI_CRM_Total_Variable_Cost__c -  ASI_CRM_CN_Last_Contract_EstVExpense__c )/ASI_CRM_CN_Last_Contract_EstVExpense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VS Variable Expense %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_VS_Volume_9L__c</fullName>
        <formula>( ASI_CRM_CN_Total_Volume_9L__c - ASI_CRM_CN_Last_Contract_Volume_Total__c)/ASI_CRM_CN_Last_Contract_Volume_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VS Volume 9L %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Variable_Expense_Aligned__c</fullName>
        <label>Variable Expense Aligned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Volume_Aligned__c</fullName>
        <label>Volume Aligned?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_City__c</fullName>
        <formula>ASI_CRM_CN_Outlet__r.ASI_CRM_CN_CCity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_Total__c</fullName>
        <formula>ASI_CRM_Fixed_Expense__c + ASI_CRM_Bottle_Incentive_Total__c +   ASI_CRM_Promotion_Service_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Fixed_Expense__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fixed Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Image__c</fullName>
        <formula>TEXT(ASI_CRM_CN_Outlet__r.ASI_CRM_CN_Image__c)</formula>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Investment_per_Equiv_Chivas_12Y__c</fullName>
        <label>Investment per Equiv. Chivas 12Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Last_Contract_Pro_Forma_ROI__c</fullName>
        <label>Last Contract Pro-Forma ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Last_PO_No__c</fullName>
        <formula>ASI_CRM_CN_Last_Contract__r.ASI_CRM_CN_PO_No__c</formula>
        <label>Last PO No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Monthly_Contract_Total_Vol_9LC__c</fullName>
        <label>Monthly Contract Total Volume (9LC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Months__c</fullName>
        <formula>IF(NOT(ISBLANK( ASI_CRM_End_Date__c )) &amp;&amp; NOT(ISBLANK( ASI_CRM_Start_Date__c ))
,(((YEAR(ASI_CRM_End_Date__c ) - YEAR(ASI_CRM_Start_Date__c ) - 1) *12) + (12 - MONTH(ASI_CRM_Start_Date__c ) +1) + MONTH(ASI_CRM_End_Date__c ))
, 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_covered_outlet__c</fullName>
        <defaultValue>1</defaultValue>
        <label>No of Covered Outlet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_OutletChannel__c</fullName>
        <formula>ASI_CRM_CN_Outlet__r.ASI_CRM_CN_Sub_Channel__r.Name</formula>
        <label>Sub Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pro_Forma_ROI__c</fullName>
        <label>Pro-Forma ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Service_Fee__c</fullName>
        <label>Promotion Service Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Variable_Cost__c</fullName>
        <formula>ASI_CRM_Bottle_Incentive_Total__c + ASI_CRM_Promotion_Service_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Variable Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VS_Pro_Forma_ROI__c</fullName>
        <formula>( ASI_CRM_Pro_Forma_ROI__c - ASI_CRM_Last_Contract_Pro_Forma_ROI__c) /  ASI_CRM_Last_Contract_Pro_Forma_ROI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VS Pro-Forma ROI %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Variable_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Variable Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Variable_Event_Cost__c</fullName>
        <label>Variable Event Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_Option__c</fullName>
        <label>Volume Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Covered Outlet Only</fullName>
                </value>
                <value>
                    <fullName>Wholesaler Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Pro_Forma_ROI_Aligned__c</fullName>
        <label>Pro-Forma ROI Aligned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pre-Contract Evaluation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_CRM_CN_Outlet_Chi_Name__c</columns>
        <columns>ASI_CRM_No_of_Months__c</columns>
        <columns>ASI_CRM_Last_PO_No__c</columns>
        <columns>ASI_CRM_City__c</columns>
        <columns>ASI_CRM_Area__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>Pre-Contract Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Contract Evaluation</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Pre_Contract</fullName>
        <active>true</active>
        <label>CN Pre-Contract</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>